--- a/Multiagents_blogpost_.ipynb
+++ b/Multiagents_blogpost_.ipynb
@@ -45,7 +45,7 @@
     "        {\n",
     "            \"model\": \"openai/gpt-4.1-nano\",\n",
     "            \"base_url\": \"https://openrouter.ai/api/v1\",\n",
-    "            \"api_key\": \"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\"\n",
+    "            \"api_key\": \"YOUR_API_KEY:)"\n",
     "        }\n",
     "    ]\n",
     "}\n"
